force-app/main/default/objects/AI_Canvas_Template_Component__c/AI_Canvas_Template_Component__c.object-meta.xml
<CustomObject>
    <label>Canvas Template Component</label>
    <nameField>
        <displayFormat>CTC-{000000}</displayFormat>
        <label>Canvas Template Component Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Canvas Template Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>