force-app/main/default/objects/AI_Canvas_Template_Component__c/fields/AI_Canvas_Template__c.field-meta.xml
<CustomField>
    <fullName>AI_Canvas_Template__c</fullName>
    <label>Canvas Template</label>
    <referenceTo>AI_Canvas_Template__c</referenceTo>
    <relationshipLabel>Canvas Template Components</relationshipLabel>
    <relationshipName>Canvas_Template_Components</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>