force-app/main/default/objects/AI_Canvas_Template_Component__c/fields/AI_Prompt__c.field-meta.xml
<CustomField>
    <fullName>AI_Prompt__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Prompt</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AI_Prompt__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AI_Prompt__c</referenceTo>
    <relationshipLabel>Canvas Template Components</relationshipLabel>
    <relationshipName>Canvas_Template_Components</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>