force-app/main/default/objects/AI_Canvas_Template_Component__c/fields/AI_Summary_Prompt__c.field-meta.xml
<CustomField>
    <fullName>AI_Summary_Prompt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Summary Prompt</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AI_Prompt__c.Object__c</field>
            <operation>equals</operation>
            <value>AI_Response__c</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AI_Prompt__c</referenceTo>
    <relationshipLabel>Canvas Template Components (Prompt)</relationshipLabel>
    <relationshipName>Canvas_Template_Components1</relationshipName>
    <type>Lookup</type>
</CustomField>