force-app/main/default/objects/AI_Canvas_Template_Component__c/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <label>Icon</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>custom1</fullName>
                <default>true</default>
                <label>custom1</label>
            </value>
            <value>
                <fullName>custom2</fullName>
            </value>
            <value>
                <fullName>custom3</fullName>
            </value>
            <value>
                <fullName>custom4</fullName>
            </value>
            <value>
                <fullName>custom5</fullName>
            </value>
            <value>
                <fullName>custom6</fullName>
            </value>
            <value>
                <fullName>custom7</fullName>
            </value>
            <value>
                <fullName>custom8</fullName>
            </value>
            <value>
                <fullName>custom9</fullName>
            </value>
            <value>
                <fullName>custom10</fullName>
            </value>
            <value>
                <fullName>custom11</fullName>
            </value>
            <value>
                <fullName>custom12</fullName>
            </value>
            <value>
                <fullName>custom13</fullName>
            </value>
            <value>
                <fullName>custom14</fullName>
            </value>
            <value>
                <fullName>custom15</fullName>
            </value>
            <value>
                <fullName>custom16</fullName>
            </value>
            <value>
                <fullName>custom17</fullName>
            </value>
            <value>
                <fullName>custom18</fullName>
            </value>
            <value>
                <fullName>custom19</fullName>
            </value>
            <value>
                <fullName>custom20</fullName>
            </value>
            <value>
                <fullName>custom21</fullName>
            </value>
            <value>
                <fullName>custom22</fullName>
            </value>
            <value>
                <fullName>custom23</fullName>
            </value>
            <value>
                <fullName>custom24</fullName>
            </value>
            <value>
                <fullName>custom25</fullName>
            </value>
            <value>
                <fullName>custom26</fullName>
            </value>
            <value>
                <fullName>custom27</fullName>
            </value>
            <value>
                <fullName>custom28</fullName>
            </value>
            <value>
                <fullName>custom29</fullName>
            </value>
            <value>
                <fullName>custom30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>