force-app/main/default/objects/AI_Canvas_Template_Component__c/fields/Width__c.field-meta.xml
<CustomField>
    <fullName>Width__c</fullName>
    <label>Width</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1/3 Column</fullName>
            </value>
            <value>
                <fullName>2/3 Column</fullName>
            </value>
            <value>
                <fullName>3/3 Column</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>